argocd/platform/platform/envs/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: socat
spec:
  selector:
    app: platform
  ports:
    - name: http-5173
      protocol: TCP
      port: 5173
    - name: http-51733
      protocol: TCP
      port: 51733
