argocd/platform/platform/envs/dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: platform
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - 127.0.0.1.nip.io
  rules:
    - backendRefs:
        - name: platform
          port: 5173
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-template
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - app-template.127.0.0.1.nip.io
  rules:
    - backendRefs:
        - name: platform
          port: 51733
      matches:
        - path:
            type: PathPrefix
            value: /
